--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
+@font-face {
+    font-family: "Vazir";
+    src: url("../assets/fonts/Vazir.ttf") format("truetype");
+    src: url("../assets/fonts/Vazir.eot") format("eot");
+    src: url("../assets/fonts/Vazir.woff") format("woff");
+    src: url("../assets/fonts/Vazir.woff2") format("woff2");
+  }
 @tailwind utilities;
